--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h6 {
   color: #001418;
   margin: 0;
   font-weight: 600;
-  font-family: 'AmbroiseFrancois-Regular', sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 p {
