--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Ambroise Francois';
+    src: url('AmbroiseFrancois-Regular.woff2') format('woff2'),
+        url('AmbroiseFrancois-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 /* =================================
 ------------------------------------
   Riddle - Portfolio
@@ -25,6 +32,8 @@ h6 {
   margin: 0;
   font-weight: 400;
   font-family: 'AmbroiseFrancois-Regular', sans-serif;
+  font-weight: normal;
+  font-style: normal;
 }
 
 p {
