--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,7 @@ h6 {
   color: #001418;
   margin: 0;
   font-weight: 400;
-  font-family: 'AmbroiseFrancois-Regular', sans-serif;
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'Ambroise Francois';
 }
 
 p {
