--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h6 {
   color: #001418;
   margin: 0;
   font-weight: 400;
-  font-family: 'Ambroise Francois';
+  font-family: 'AmbroiseFrancois-Regular';
 }
 
 p {
