--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h6 {
   color: #001418;
   margin: 0;
   font-weight: 400;
-  font-family: 'AmbroiseFrancois-Regular';
+  font-family: 'Ambroise Francois';
 }
 
 p {
@@ -367,7 +367,7 @@ ol {
 .site-logo {
   font-size: 25px;
   padding-top: 20px;
-  font-family: 'AmbroiseFrancois-Regular', sans-serif;
+  font-family: 'Ambroise Francois', sans-serif;
 }
 
 .main-menu ul {
