--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,9 @@ ol {
   padding: 20px 0 5px;
 }
 
+.journal{
+  font-family: 'Ambroise Francois', sans-serif!important;
+}
 .header-btn {
   float: right;
   margin-right: 0;
@@ -523,8 +526,8 @@ ol {
 }
 
 .footer-section .copyright {
-  font-size: 12px;
-  color: #979797;
+  font-size: 10px;
+  color: grey;
 }
 
 .social-links {
@@ -533,7 +536,7 @@ ol {
 }
 
 .social-links a {
-  color: #979797;
+  color: black;
   font-size: 15px;
   margin-right: 30px;
 }
