--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 @font-face {
     font-family: 'Ambroise Francois';
+        font-family: 'Oswald';
     src: url('fonts/AmbroiseFrancois-Regular.woff2') format('woff2'),
         url('fonts/AmbroiseFrancois-Regular.woff') format('woff');
+    src: url('fonts/Oswald-Regular.woff2') format('woff2'),
+        url('fonts/Oswald-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
 /* =================================
 ------------------------------------
   Riddle - Portfolio
@@ -36,7 +40,7 @@ h6 {
 
 p {
   font-size: 18px;
-  color: #6c757d;
+  color: #545b62;
   line-height: 1.8;
 }
 
