--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 }
 @font-face {
     font-family: 'Lato';
-    src: url('font/Lato-Regular.woff2') format('woff2'),
-        url('font/Lato-Regular.woff') format('woff');
+    src: url('fonts/Lato-Regular.woff2') format('woff2'),
+        url('fonts/Lato-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
