--- a/css/style.css
+++ b/css/style.css
@@ -379,9 +379,10 @@ ol {
     Header Section
 --------------------------*/
 .header-section {
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 20px;
   position: relative;
+  padding-block-end: 0px;
 }
 
 .site-logo {
@@ -424,6 +425,11 @@ ol {
 --------------------------*/
 .intro-section {
   padding: 110px 0;
+  padding-block-end: 130px;
+}
+
+.intro-section-journal {
+  padding-block-start: 10px 0;
 }
 
 /*------------------------
