--- a/css/style.css
+++ b/css/style.css
@@ -729,6 +729,9 @@ ol {
   .home-2.container {
     width: auto;
   }
+  .section-title {
+    font-size: 35px;
+  }
 }
 
 /* Medium screen : 992px. */
@@ -792,7 +795,7 @@ ol {
     display: none;
   }
   .section-title {
-    font-size: 30px;
+    font-size: 35px;
   }
   .portfolio-filter {
     text-align: center;
