--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,13 @@ ol {
   font-size: 12px;
 }
 
+.section-credit{
+  font-size: 12px;
+  color: #C0C0C0;
+  padding-left: 750px;
+
+}
+
 .section-p {
   width: 60%;
   margin: auto;
@@ -812,6 +819,6 @@ ol {
   }
 
   #principal-title{
-    font-size: 45px;
+    font-size: 40px;
   }
 }
